# RetellingASR

./: .env  PRD.md  Retelling.mmd  evaluation_jobs.db  main.py  prompt.json  pyproject.toml  test_client.py
.trae/: TODO.md
.trae/documents/: AI英语复述评测系统-完整PRD.md  API文档与调用方式.md
