[project]
name = "retellingasr"
version = "0.1.0"
description = "AI-powered sentence retelling evaluation service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "assemblyai>=0.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6"
]
